--- a/exam-frontend/index.html
+++ b/exam-frontend/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
     <style>
-      body {
-        font-family: 'Times New Roman', Times, serif;
+      * {
+        margin: 0;
+        padding: 0;
       }
     </style>
   </head>
